syntax = "proto3";

option csharp_namespace = "Xelit3.Playground.API.Grpc.Client";

package todo;


service ToDo{

	////Read
	rpc GetSingleToDo(GetSingleToDoRequest) returns (ToDoResponse) { }

	rpc GetAllToDo(GetAllToDoRequest) returns (ToDoCollectionResponse) { }

	//Server stream response
	rpc GetAllToDoStream(GetAllToDoRequest) returns (stream ToDoResponse) { }

	////Create
	rpc CreateToDo(CreateToDoRequest) returns (CreateToDoResponse) { }

	////Update
	rpc UpdateToDo(UpdateToDoRequest) returns (UpdateToDoResponse) { }

	////Delete
	rpc DeleteToDo(DeleteToDoRequest) returns (DeleteToDoResponse) { }

}


message GetSingleToDoRequest {
	int32 id = 1;
}

message ToDoResponse {
	int32 id = 1;
	string title = 2;
	string description = 3;
	string to_do_status = 4;
}

message GetMultipleToDoRequest { }

message GetAllToDoRequest { }

message ToDoCollectionResponse {
	repeated ToDoResponse to_dos = 1;
}

message CreateToDoRequest {
	string title = 1;
	string description = 2;
}

message CreateToDoResponse {
	int32 id = 1;
}

message UpdateToDoRequest {
	int32 id = 1;
	string title = 2;
	string description = 3;
}

message UpdateToDoResponse {
	int32 id = 1;
}

message DeleteToDoRequest {
	int32 id = 1;
}

message DeleteToDoResponse {
	int32 id = 1;
}